# karaoke_bot_old_version

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
bot/: Dockerfile  Dockerfile_bot  Dockerfile_model  create_bot.py  docker-compose.yml  id_url_all.csv  karaoke_old_version.db  main.py  recommendations.py  sqlalchemy_orm.py  unique_links_parse.py  visitor_performance.csv
bot/handlers/: __init__.py  common.py  mass_message.py  order_track.py  routing_to_model.py
bot/moco/: model.py
bot/moco/utils/: save_utils.py
bot/moco/utils/.ipynb_checkpoints/: multithread_utils-checkpoint.py
bot/utils/: download_youtube_track.py
moco/: Dockerfile  app.py  audio_processing.py  model.py
moco/downloader/: downloader.py
moco/moco/: builder.py  loader.py
moco/utils/: multithread_utils.py
