[tool.poetry]
name = "karaoke-bot"
version = "0.1.0"
description = ""
authors = ["gra4evp <petrgrachev1@gmail.com>"]
readme = "README.md"
packages = [{include = "karaoke_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
yt-dlp = "^2023.3.4"
pymysql = "^1.0.3"
sqlalchemy = "^2.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
